--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="main-content">
             <header>
-                <h1>Статистика погоды</h1>
+                <h1>Прогноз погоды</h1>
             </header>
 
             <div class="search-container">
