--- a/index.html
+++ b/index.html
@@ -111,5 +111,8 @@
     </div>
 
     <script src="script.js"></script>
+
+     <div class="sidebar">
+            <div class="sidebar-section">
 </body>
 </html>
